--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.js",
   "scripts": {
     "postinstall": "browserify client/app.js -o client/bundle.js",
-    "start": "node server/server.js"
+    "start": "node server/server.js",
   },
   "license": "MIT",
   "dependencies": {
