--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "MIT",
   "dependencies": {
     "browserify": "^14.3.0"
+  },
+  "engines": {
+    "node": "6.10.2",
+    "npm": "3.10.10"
   }
 }
